--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>Student Application</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.organization>gabrpavel</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
@@ -28,6 +30,7 @@
             <scope>test</scope>
         </dependency>
 
+             
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
